<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="#1204"
    tools:context=".ViagemActivity">

    <Spinner
        android:id="@+id/txtPlaca"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="607dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLocal"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="394dp"
        android:background="#fff"
        android:hint="@string/local_da_viagem_km_saida_veiculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtData" />

    <TextView
        android:id="@+id/txtMotorista"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="25dp"
        android:background="#fff"
        android:hint="@string/nome_motorista"
        app:layout_constraintBottom_toTopOf="@+id/txtData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaca" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="400dp"
        android:layout_height="40dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="16dp"
        android:background="#fff"
        android:hint="@string/data_da_viagem"
        app:layout_constraintBottom_toTopOf="@+id/txtLocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMotorista" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="92dp"
        android:onClick="click"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/txtLocal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlaca" />

</androidx.constraintlayout.widget.ConstraintLayout>