<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo3"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="221dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="465dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/email_email_com"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:scaleX="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:autofillHints="" tools:targetApi="o"/>

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="326dp"
        android:background="#fff"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:autofillHints="" tools:targetApi="o"/>

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="179dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="153dp"
        android:background="#148B21"
        android:onClick="sendMessage"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenha"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>